# DownloadManager

./: CMakeLists.txt  Makefile  README.md  main.cpp
header/: Data.h  Ftp.h  Ftps.h  Http.h  Https.h  Parser.h  client.h  ftp.h  http.h  manager.h  server.h
source/: Data.cpp  Ftp.cpp  Ftps.cpp  Http.cpp  Https.cpp  Manager.cpp  Parser.cpp  client.cpp  ftp.cpp  http.cpp  manager.cpp  server.cpp
